--- a/NexuSeguros/src/main/java/com/mycompany/views/leerCliente.form
+++ b/NexuSeguros/src/main/java/com/mycompany/views/leerCliente.form
@@ -210,11 +210,17 @@
             <Component class="javax.swing.JComboBox" name="jComboBox1">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
+                  <StringArray count="10">
+                    <StringItem index="0" value="Selecciona"/>
+                    <StringItem index="1" value="Nombre"/>
+                    <StringItem index="2" value="Apellido P"/>
+                    <StringItem index="3" value="Apellido M"/>
+                    <StringItem index="4" value="Crup"/>
+                    <StringItem index="5" value="Folio "/>
+                    <StringItem index="6" value="Tipo S"/>
+                    <StringItem index="7" value="Cantidad"/>
+                    <StringItem index="8" value="Vigencia"/>
+                    <StringItem index="9" value="Recpcion"/>
                   </StringArray>
                 </Property>
               </Properties>
